Unreleased (TBD)


Version 3.2.2 (2025.04.28)
- Fix for modded contacts that can wipe out player's fleet when calling them remotely while they do not want to talk with the player.
  Instead, a dialog window will be displayed that will disappear immediately.
- Remove duplicate tags from Intel window (first row) and change font color (adjustable in `data/config/tag_data.json`).
- Fix for managing markets query results. Result intel entries will respect "Include Submarkets" now.
  Market Viewer will respect the filter as well, consider changing this in the future.


Version 3.2.1 (2025.04.04)
- Fix market intel when using Group By Star System method.
- Update the game dependency to 0.98a-RC7.


Version 3.2.0 (2025.04.02)
- Update mod to Starsector 0.98a-RC5.


Version 3.1.3 (2023.06.17)
- Filter out "Unique" admin skill added by Tahlan Shipworks mod from Admin skills preview in Query builder and results.
- Add merging CSV support for filtering more skills from Admin skills preview in Query builder and results.


Version 3.1.2 (2023.06.10)
- Add back Special Contact from Nexerelin to Contacts Board (accidentally removed in 3.1.0).
- Fix crash on Exploration intel filtering (NPE if any intel returned `null` tags).
- Fix D-Mod count filtering in Market query maker.


Version 3.1.1 (2023.06.09)
- Correctly initialize Stelnet on a fresh game or save. Stelnet would fail to initialize when starting a New Game or Loading a Game from Main Menu.


Version 3.1.0 (2023.06.08)
New features:
- Move setting handling from `stelnet.json` file to LunaLib. Requires LunaLib.
- Add Exploration tab mini-board that allows intel filtering. Works on intel added by CaptainsLog (will show additional filters).
- Add option to use Codex entry lists in query builder (default is to use known lists from visible factions).
- Add option for Commodities, Contacts, and Market modules to only work when within Comms range.