@@ -1,4 +1,6 @@
 Unreleased (TBD)
+- Change Commodities Intel tab to filter out markets returned by the `Excluder` - related files:
+  `market_by_faction.csv`, `market_by_id.csv`, `market_by_system.csv`, `market_by_tag.csv` and `skill_by_id.csv`
 
 
 Version 3.2.2 (2025.04.28)
